--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -297,7 +297,7 @@
     position: relative;
     height: auto;
     overflow: visible;
-    padding-top: 6rem;
+    padding-top: 4rem;
     padding-bottom: 2rem;
   }
 
